# aviutl_ffmpeg_input

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  build.bash
.github/workflows/: releaser.yml  test-build.yml
src/: CMakeLists.txt  api.c  api.h  audio.c  audio.h  audioidx.c  audioidx.h  aviutl.c  aviutl.h  bridgeclient.c  bridgeclient.h  bridgecommon.h  bridgeserver.c  config.c  config.h  error.c  error.h  ffmpeg.c  ffmpeg.h  ffmpeg_input.rc  ffmpeg_test.c  ffmpegutil.c  ffmpegutil.h  file.c  file.h  info.h  ipc_test.c  ipcclient.c  ipcclient.h  ipccommon.c  ipccommon.h  ipcserver.c  ipcserver.h  main.c  mapped.c  mapped.h  now.c  now.h  process.c  process.h  (+8 more)
src/cmake/: extract-ffmpeg.cmake
src/testdata/: 15secs.mkv
